--- a/res/layout/board.xml
+++ b/res/layout/board.xml
@@ -13,6 +13,38 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 >
+    <LinearLayout android:orientation="horizontal"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:gravity="center"
+                  >
+                  
+        <TextView     
+        android:id="@+id/text_view_one"           
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"       
+        />            
+        
+        <TextView    
+        android:id="@+id/text_view_two"  
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />    
+                  
+        <TextView    
+        android:id="@+id/text_view_three"  
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />        
+        
+        <TextView
+        android:id="@+id/text_view_four"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />              
+                  
+    </LinearLayout>            
+                
     <edu.aueb.cs.uw.BoardView
        android:id="@+id/board_view"
        android:layout_width="fill_parent" 
