--- a/res/layout/board.xml
+++ b/res/layout/board.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
+              android:background="@drawable/scrabble_tiles"
               android:layout_width="fill_parent" 
               android:layout_height="fill_parent"
               android:paddingLeft="3dp"
