--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -13,6 +13,26 @@ android:orientation="vertical">
  android:layout_height="wrap_content"
  android:src="@drawable/upwords"/>
 
+<TextView
+android:id="@+id/widget35"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"/>
+
+<TextView
+android:id="@+id/widget35"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"/>
+
+<TextView
+android:id="@+id/widget35"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"/>
+
+<TextView
+android:id="@+id/widget35"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"/>
+
 <Button
 android:id="@+id/new_game"
 android:layout_width="200px"
