--- a/res/layout/configs.xml
+++ b/res/layout/configs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/tabhost"
+    android:background="@drawable/scrabble_tiles"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <LinearLayout
