Added basic next turn functionality

--- a/res/layout/board.xml
+++ b/res/layout/board.xml
@@ -42,6 +42,10 @@
                    style="@style/toolbar_button"
     	           android:src="@drawable/undo"
                    />
+      <ImageButton android:id="@+id/switch_button_horizontal"
+      		       style="@style/toolbar_button"
+    	           android:src="@drawable/switch_tile"
+                   />
    	  <ImageButton android:id="@+id/endturn_button_horizontal"
                    style="@style/toolbar_button"
     	           android:src="@drawable/end_turn"
