--- a/res/layout/configs.xml
+++ b/res/layout/configs.xml
@@ -45,6 +45,31 @@
                      android:text="Color:" 
                      android:layout_below="@id/et1"
                      />
+                  <Spinner 
+                     android:id="@+id/spinner1"
+                     android:layout_width="fill_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_below="@id/tv1b"
+                     />
+                  <LinearLayout
+                  android:orientation="horizontal"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_below="@id/spinner1"
+                  >                                 
+                     <Button
+                        android:id="@+id/begin_game1"
+                        android:layout_width="100px"
+                        android:layout_height="wrap_content"
+                        android:text="Begin"                     
+                     />
+                     <Button
+                        android:id="@+id/cancel1"
+                        android:layout_width="100px"
+                        android:layout_height="wrap_content"
+                        android:text="Cancel"                     
+                     /> 
+                  </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                   android:id="@+id/rl2"
@@ -76,6 +101,31 @@
                      android:text="Color:" 
                      android:layout_below="@id/et2"
                      />
+                  <Spinner 
+                     android:id="@+id/spinner2"
+                     android:layout_width="fill_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_below="@id/tv2b"
+                     />
+                  <LinearLayout
+                  android:orientation="horizontal"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_below="@id/spinner2"
+                  >                                 
+                     <Button
+                        android:id="@+id/begin_game2"
+                        android:layout_width="100px"
+                        android:layout_height="wrap_content"
+                        android:text="Begin"                     
+                     />
+                     <Button
+                        android:id="@+id/cancel2"
+                        android:layout_width="100px"
+                        android:layout_height="wrap_content"
+                        android:text="Cancel"                     
+                     /> 
+                  </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                   android:id="@+id/rl3"
@@ -107,6 +157,31 @@
                      android:text="Color:" 
                      android:layout_below="@id/et3"
                      />
+                  <Spinner 
+                     android:id="@+id/spinner3"
+                     android:layout_width="fill_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_below="@id/tv3b"
+                     />
+                  <LinearLayout
+                  android:orientation="horizontal"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_below="@id/spinner3"
+                  >                                 
+                     <Button
+                        android:id="@+id/begin_game3"
+                        android:layout_width="100px"
+                        android:layout_height="wrap_content"
+                        android:text="Begin"                     
+                     />
+                     <Button
+                        android:id="@+id/cancel3"
+                        android:layout_width="100px"
+                        android:layout_height="wrap_content"
+                        android:text="Cancel"                     
+                     /> 
+                  </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                   android:id="@+id/rl4"
@@ -138,6 +213,31 @@
                      android:text="Color:" 
                      android:layout_below="@id/et4"
                      />
+                  <Spinner 
+                     android:id="@+id/spinner4"
+                     android:layout_width="fill_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_below="@id/tv4b"
+                     />
+                  <LinearLayout
+                  android:orientation="horizontal"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_below="@id/spinner4"
+                  >                                 
+                     <Button
+                        android:id="@+id/begin_game4"
+                        android:layout_width="100px"
+                        android:layout_height="wrap_content"
+                        android:text="Begin"                     
+                     />
+                     <Button
+                        android:id="@+id/cancel4"
+                        android:layout_width="100px"
+                        android:layout_height="wrap_content"
+                        android:text="Cancel"                     
+                     /> 
+                  </LinearLayout>
                </RelativeLayout>
     	</FrameLayout>
     </LinearLayout>
