--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -3,7 +3,7 @@
 <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/fst738t3zznyqf"
+    android:background="#ff000000"
     >
     
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -26,7 +26,7 @@
     
 <TextView
         android:text="Anastasios Litsas-Alexis"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="10pt"
         android:id="@+id/textview1"
         android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
         
 <TextView
         android:text="Xenofon Foukas"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:id="@+id/textview3"
         android:textSize="10pt"
         android:layout_width="wrap_content"
