--- a/res/menu/options_menu2.xml
+++ b/res/menu/options_menu2.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/scoreb"
           
-          android:title="Score" />
+          android:title="Game info" />
     <item android:id="@+id/exitb"
           
           android:title="Exit" />
